welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:2: error: '<-' expected but integer literal found.
for(i 1 to 8){avance}
      ^Runner:4: error: illegal start of simple expression
} 
^